# Capstone-2025

./: .gitignore  EnhancementOne.md  EnhancementThree.md  EnhancementTwo.md  README.md  _config.yml  index.md
Artifact_1_TopDestinationsQt/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  MainWindow.cpp
Artifact_2_CS_Visual_Graphics/: CS_Visual_Graphics.sln
Artifact_2_CS_Visual_Graphics/CS_Visual_Graphics/: CS_Visual_Graphics.vcxproj  CS_Visual_Graphics.vcxproj.filters
Artifact_3_CS340_Project/: AnimalShelterCRUD.ipynb  AnimalShelterCRUD.py  Main.ipynb  ProjectTwoDashboard.ipynb  cs340_requirements.txt
Artifact_3_CS340_Project/Module6Assignment/: ModuleSixMilestone-Template.ipynb
Initial_Files_CS250/TopFiveDestinationList/: TopFiveDestinationList.java
Initial_Files_CS330/CS330-Comp-Graphic-and-Visualization-main/: Justify development choices for your 3D scene.docx  README.md
Initial_Files_CS340/CS340 Project/: AnimalShelterCRUD.ipynb  AnimalShelterCRUD.py  Main.ipynb  Module Five Assignment.ipynb  ModuleSixMilestone-Template.ipynb  ProjectTwoDashboard.ipynb
